examples/test/testpolicy14595.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14595
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key24: value36
      key3: value11
      key40: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value27
      podSelector:
        matchLabels:
          key39: value28
